# Landlords

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  CardPanel.cpp  Cards.cpp  Cards.h  GamePannel.cpp  GamePannel.h  Player.h  README.md  main.cpp
src/: Card.cpp  Card.h  CardPanel.h  Cards.cpp  Cards.h  GamePannel.ui  Player.cpp  Player.h  Robot.cpp  Robot.h  UserPlayer.cpp  UserPlayer.h
